--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-native-firebase/app": "^14.1.0",
     "@react-native-firebase/auth": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-elements": "^3.4.2",
