--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bcrypt": "^5.0.1",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
+    "react-native-image-slider-box": "^1.1.14",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0",
