--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@react-native-firebase/app": "^14.1.0",
     "@react-native-firebase/auth": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "react": "17.0.2",
-    "react-native": "0.66.4",
+    "react-native": "^0.66.4",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.4.1",
     "react-native-image-slider-box": "^1.1.14",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
