--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.1",
     "react-native-image-slider-box": "^1.1.14",
+    "react-native-maps": "^0.31.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-vector-icons": "^9.0.0",
